- bug fix: prevent deleting a file which is being used by another process